<resources>
    <string name="app_name">AutoSilenter</string>
    <string name="undefind_txt">نامشخص</string>
    <string name="date_format">yyyy/MM/dd</string>
    <string name="quickSilent_txt">بی صدا کردن سریع</string>
    <string name="first_item_txt">30 دقیقه</string>
    <string name="second_item_txt">1 ساعت</string>
    <string name="third_item_txt">2 ساعت</string>
    <string name="fourth_item_txt">3 ساعت</string>
    <string name="durationBox_title_txt">مدت زمان بی صدا بودن را مشخص کنید.</string>
    <string name="confirm_txt">تایید</string>
    <string name="reject_txt">برگرد</string>
    <string name="event_name_txt">نام رویداد</string>
    <string name="day_time">روز و ساعت :</string>
    <string name="start_time_txt">ساعت شروع</string>
    <string name="end_time_txt">ساعت پایان</string>
    <string name="start_date_txt">از تاریخ </string>
    <string name="endDate_txt">تا تاریخ </string>
    <string name="dialog_btn_cancel">برگرد</string>
    <string name="dialog_btn_save">ذخیره</string>
    <string name="fill_input_msg">لطفا ساعت شروع و پایان را مشخص کنید.</string>
    <string name="endTime_error">ساعت پایان باید بعد از ساعت شروع باشد.</string>
    <string name="startTime_error">ابتدا ساعت شروع را مشخص کنید.</string>
    <string name="startTime_error2">ساعت شروع باید بعد از ساعت سیستم باشد یا حداقل یک روز مشخص شود.</string>
    <string name="fill_eventName_msg">نام رویداد را مشخص کنید.</string>
    <string name="fill_endTime_msg">لطفا ساعت پایان را مشخص کنید.</string>
    <string name="fill_startTime_msg">لطفا ساعت شروع را مشخص کنید.</string>
    <string name="specialTime_notif_msg">تنظیمات مورد نظر در ساعت مشخص شده اعمال میشود.</string>
    <string name="time_format">%02d:%02d</string>
    <string name="days_title_txt">روز:</string>
    <string name="saturday">شنبه</string>
    <string name="everyDay_txt">هرروز</string>
    <string name="sunday">یکشنبه</string>
    <string name="monday">دوشنبه</string>
    <string name="tuesday">سهشنبه</string>
    <string name="wednesday">چهارشنبه</string>
    <string name="thursday">پنجشنبه</string>
    <string name="friday">جمعه</string>
    <string name="re_event_name">نام رویداد</string>
    <string name="event_start_time">10:45</string>
    <string name="event_end_time">10:34</string>
    <string name="re_start_date">1401/3/25</string>
    <string name="re_end_time">1401/3/26</string>
    <string name="till_hour">تا ساعت </string>
    <string name="from_hour">از ساعت </string>
    <string name="select_day_error">روز را مشخص کنید.</string>
    <string name="days_of_week_txt">شنبه، یکشنبه، دوشنبه</string>
    <string name="custom_app_name">سایلنتر</string>
    <string name="date_txt">تاریخ :</string>
    <string name="date_input_error_msg">تاریخ انتخابی باید بعد از تاریخ سیستم باشد یا برابر با تاریخ سیستم باشد.</string>
    <string name="end_date_error_msg">تاریخ پایان باید بعد از تاریخ شروع باشد یا همزمان با تاریخ شروع باشد.</string>
    <string name="define_end_date_msg">تاریخ پایان را مشخص کنید.</string>
    <string name="forced_msg_verb">فعال شد. </string>
    <string name="today_txt">امروز</string>
    <string name="days_txt">روز های</string>
    <string name="from_date">از تاریخ</string>
    <string name="to_date">تا تاریخ</string>
    <string name="setting_title">تنظیمات:</string>
    <string name="silent_mode_msg">حالت بی صدا</string>
    <string name="vibrate_mode_msg">حالت لرزش</string>
    <string name="dark_mode_msg"> حالت شب</string>
    <string name="network_mode_msg">حالت غیرفعال شدن اینترنت </string>
    <string name="silent_txt">فعال کردن حالت بی صدا</string>
    <string name="darkMode_txt">فعال کردن حالت شب</string>
    <string name="vibrate_txt">فعال کردن حالت لرزش</string>
    <string name="wifiInternet_txt">غیرفعال کردن اینترنت وای فای</string>
    <string name="beVerb">میماند.</string>
    <string name="msg1">تلفن همراه شما تا ساعت </string>
    <string name="done_setting">تنظیمات اعمال شد</string>
    <string name="select_setting_error">تنظیمات مورد نظر را انتخاب کنید.</string>
    <string name="setting_target_msg">تنظیمات مورد نظر تا ساعت</string>
    <string name="beActiveSetting"> فعال میماند.</string>
    <string name="dataNetwork_txt">غیرفعال کردن اینترنت داده</string>
    <string name="silent_mode_for">حالت سکوت برای </string>
    <string name="active_verb">  فعال شد.</string>
    <string name="share_txt">اشتراک</string>
    <string name="guide_txt">راهنما</string>
    <string name="about_txt">درباره</string>
    <string name="score_txt">امتیاز</string>
    <string name="setting_txt">تنظیمات</string>
    <string name="recommend_useApp_txt">اعمال تنظیمات بصورت خودکار.</string>
    <string name="share_title">اشتراک گذاری از طریق</string>
    <string name="help_title1">اپلیکیشن سایلنتر</string>
    <string name="subText_title1">در اپلیکیشن سایلنتر شما به راحتی میتوانید در هر زمان، تنظیمات مورد نظر خود را به صورت اتوماتیک اعمال کنید.</string>
    <string name="help_title2">بیصدا کردن سریع</string>
    <string name="sub_title2">برای بیصدا کردن موبایل خود به مدت 30 دقیقه ، یک ساعت، دو ساعت و سه ساعت میتوانید از سایلنتر سریع که در صفحه اصلی قرار دارد استفاده کنید.</string>
    <string name="help_title3">تنظیمات مورد نظر در تاریخ، روز و ساعت مشخص</string>
    <string name="sub_title3">برای اینکه بتوانید حالت لرزش، حالت بیصدا، حالت غیرفعال کردن اینترنت داده، حالت غیر فعال کردن اینترنت وای فای را در تاریخ یا ساعت خاص اعمال کنید. از علامت + در صفحه اصلی استفاده کنید.</string>
    <string name="home_txt">خانه</string>
    <string name="setting_notify">اعلان ها</string>
    <string name="setting_always">همیشه</string>
    <string name="setting_just">فقط در زمان تنظیم</string>
    <string name="setting_language">زبان</string>
    <string name="setting_aboutApp">درباره اپ</string>
    <string name="setting_persian">فارسی</string>
    <string name="setting_english">انگلیسی</string>
    <string name="language_dialog_title">زبان مورد نظر را انتخاب کنید.</string>
    <string name="notification_dialog_title">اعلان ها چه زمانی نمایش داده شوند؟</string>
    <string name="permanent_notification_msg">سایلنتر همراه شما</string>
    <string name="androidVersion_error">این قابلیت با دستگاه شما سازگار نیست.</string>
    <string name="first_title_about">اپلیکیشن سایلنتر</string>
    <string name="first_subtitle_about">در اپلیکیشن سایلنتر شما به راحتی میتوانید در هر زمان به مدت دلخواه تنظیمات موردنظر را اعمال کنید.</string>
    <string name="second_title_about">شرکت سازنده</string>
    <string name="second_subtitle_about">اپ سایلنتر توسط تیم برنامه نویسی شرکت توسعه گران جهان رایانه ارائه شده است.</string>
    <string name="third_title_about">نسخه اپلیکیشن</string>
    <string name="third_subtitle_about">نسخه 1.0.0</string>
    <string name="aiplane_mode_txt">فعال کردن حالت هواپیما</string>
    <string name="event_name_default_text">رویداد</string>
</resources>