<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_light2"
    tools:context=".Activities.AboutAppActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/light_white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/white">

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/top_menu_layout"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/title_style"
                android:text="@string/first_title_about" />

            <TextView
                style="@style/subtitle_style"
                android:text="@string/first_subtitle_about" />

            <TextView
                style="@style/title_style"
                android:text="@string/second_title_about" />

            <TextView
                style="@style/subtitle_style"
                android:text="@string/second_subtitle_about" />

            <TextView
                style="@style/title_style"
                android:text="@string/third_title_about" />

            <TextView
                style="@style/subtitle_style"
                android:text="@string/third_subtitle_about" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>