<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_style">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:textSize="@dimen/big_margin"
        android:gravity="center"
        android:text="@string/notification_dialog_title" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/firstRadio"
            android:text="@string/setting_always"
            style="@style/language_radio_style"
            android:layout_marginTop="@dimen/normal_margin"/>

        <RadioButton
            android:id="@+id/secondRadio"
            android:layout_width="wrap_content"
            style="@style/language_radio_style"
            android:text="@string/setting_just"
            android:checked="true"/>

    </RadioGroup>


</LinearLayout>