<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back11"
    tools:context=".Activities.EditEventActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/white">

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/top_menu_layout"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_white">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/topGuide1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name_txt"
                    android:text="@string/event_name_default_text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/date_time_txt"
                style="@style/title_setting_style"
                app:layout_constraintTop_toBottomOf="@+id/layout_event_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableStart="@drawable/clock_gray2"
                android:drawablePadding="5dp"
                android:text="@string/day_time"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <androidx.cardview.widget.CardView
                android:id="@+id/day_hour_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/date_time_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/cards_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/normal_margin"
                    android:orientation="horizontal">

                    <LinearLayout
                        style="@style/daysHour_layoutStyle">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/btn_start_time_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/btn_start_time"
                                android:hint="@string/start_time_txt"
                                style="@style/hour_style" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/btn_end_time_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_marginBottom="@dimen/normal_margin"
                            android:textColor="@color/dark_color"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/btn_end_Time"
                                style="@style/hour_style"
                                android:hint="@string/end_time_txt" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                   <LinearLayout style="@style/daysHour_layoutStyle">

                      <LinearLayout style="@style/days_row_style">

                          <CheckBox
                              android:id="@+id/everyDay"
                              android:text="@string/everyDay_txt"
                              style="@style/daysStyle" />

                          <CheckBox
                              android:id="@+id/saturday"
                              style="@style/daysStyle"
                              android:text="@string/saturday" />

                      </LinearLayout>

                       <LinearLayout
                           style="@style/days_row_style">

                           <CheckBox
                               android:id="@+id/sunday"
                               style="@style/daysStyle"
                               android:text="@string/sunday"/>

                           <CheckBox
                               android:id="@+id/monday"
                               style="@style/daysStyle"
                               android:text="@string/monday" />

                       </LinearLayout>

                       <LinearLayout
                           style="@style/days_row_style">

                           <CheckBox
                               android:id="@+id/tuesday"
                               style="@style/daysStyle"
                               android:text="@string/tuesday"
                               app:layout_constraintEnd_toStartOf="@+id/rightGuide"
                               app:layout_constraintTop_toBottomOf="@+id/sunday" />

                           <CheckBox
                               android:id="@+id/wednesday"
                               style="@style/daysStyle"
                               android:text="@string/wednesday"
                               app:layout_constraintEnd_toStartOf="@+id/leftGuide"
                               app:layout_constraintTop_toBottomOf="@+id/sunday" />

                       </LinearLayout>

                       <LinearLayout
                           style="@style/days_row_style">

                           <CheckBox
                               android:id="@+id/thursday"
                               style="@style/daysStyle"
                               android:text="@string/thursday" />

                           <CheckBox
                               android:id="@+id/friday"
                               style="@style/daysStyle"
                               android:text="@string/friday" />

                       </LinearLayout>


                   </LinearLayout>

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/rightGuide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.6" />
                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/leftGuide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.31" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/date_txt"
                style="@style/title_setting_style"
                app:layout_constraintTop_toBottomOf="@+id/day_hour_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableStart="@drawable/calendar_gray"
                android:drawablePadding="5dp"
                android:text="@string/date_txt" />

            <androidx.cardview.widget.CardView
                android:id="@+id/date_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/date_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="#F6F5F5">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/big_margin"
                    android:background="@drawable/card_background">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/EditTextLayout"
                            app:endIconMode="clear_text">
                            <com.google.android.material.textfield.TextInputEditText
                                android:inputType="date"
                                android:id="@+id/startDate"
                                style="@style/EditTextStyle"
                                android:hint="@string/start_date_txt"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </com.google.android.material.textfield.TextInputLayout>
                        <ImageView
                            android:id="@+id/closeIconStart"
                            android:src="@drawable/close_icon"
                            style="@style/IconStyle"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/normal_margin">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/EditTextLayout"
                            app:endIconMode="clear_text">

                            <com.google.android.material.textfield.TextInputEditText
                                android:inputType="date"
                                android:id="@+id/endDate"
                                style="@style/EditTextStyle"
                                android:hint="@string/endDate_txt"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/closeIconEnd"
                            android:src="@drawable/close_icon"
                            style="@style/IconStyle" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/setting_txt"
                app:layout_constraintTop_toBottomOf="@+id/date_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/setting_title"
                android:drawableStart="@drawable/setting_gray"
                android:drawablePadding="5dp"
                style="@style/title_setting_style" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/setting_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/bottomGuide"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="#F6F5F5">

                <LinearLayout
                    android:id="@+id/setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/big_margin"
                    android:paddingEnd="@dimen/big_margin"
                    android:paddingTop="5dp"
                    android:background="@color/cards_background">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/silent_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/silent_txt"
                        android:textColor="@color/black"
                        android:textSize="@dimen/days_txt_size"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/vibrate_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vibrate_txt"
                        android:textColor="@color/black"
                        android:textSize="@dimen/days_txt_size"
                        app:layout_constraintTop_toBottomOf="@+id/silent_txt"
                        app:layout_constraintStart_toStartOf="parent"/>

<!--                    <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--                        android:id="@+id/darkMode_txt"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/darkMode_txt"-->
<!--                        android:textColor="@color/black"-->
<!--                        android:textSize="@dimen/days_txt_size" />-->


                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/wifi_network_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wifiInternet_txt"
                        android:textColor="@color/black"
                        android:textSize="@dimen/days_txt_size" />

<!--                    <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--                        android:id="@+id/data_network_txt"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dataNetwork_txt"-->
<!--                        android:textColor="@color/black"-->
<!--                        android:textSize="@dimen/days_txt_size" />-->

<!--                    <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--                        android:id="@+id/airPlane_mode"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/aiplane_mode_txt"-->
<!--                        android:textColor="@color/black"-->
<!--                        android:textSize="@dimen/days_txt_size" />-->

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuide1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.09" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottomGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.97" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



